--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.0",
-    "facebook-chat-api": "github:bigtongue5566/facebook-chat-api",
+    "facebook-chat-api": "^1.6.1",
     "iconv-lite": "^0.4.24",
     "immutable": "^3.8.2",
-    "jsdom": "^12.2.0",
-    "load-json-file": "^5.1.0",
+    "jsdom": "^15.1.0",
+    "load-json-file": "^6.0.0",
     "npmlog": "^4.1.2",
-    "puppeteer": "^1.12.2",
-    "write-json-file": "^3.0.2"
+    "puppeteer": "^1.16.0",
+    "write-json-file": "^3.2.0"
   },
   "devDependencies": {
-    "dumper.js": "^1.2.0"
+    "dumper.js": "^1.3.1"
   }
 }
