--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "immutable": "^3.8.2",
     "jsdom": "^15.1.0",
     "load-json-file": "^6.0.0",
+    "node-schedule": "^1.3.2",
     "npmlog": "^4.1.2",
     "puppeteer": "^1.16.0",
     "write-json-file": "^3.2.0"
