--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.0",
-    "facebook-chat-api": "^1.6.1",
+    "facebook-chat-api": "github:Schmavery/facebook-chat-api",
     "iconv-lite": "^0.5.0",
     "immutable": "^3.8.2",
-    "jsdom": "^15.1.1",
+    "jsdom": "^15.2.1",
     "load-json-file": "^6.2.0",
     "node-schedule": "^1.3.2",
     "npmlog": "^4.1.2",
-    "puppeteer": "^1.20.0",
-    "write-json-file": "^4.2.0"
+    "puppeteer": "^2.0.0",
+    "write-json-file": "^4.2.1"
   },
   "devDependencies": {
     "dumper.js": "^1.3.1"
