--- a/package.json
+++ b/package.json
@@ -5,23 +5,28 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "node app.js",
+    "dev": "node -r dotenv/config app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.19.0",
+    "axios": "^0.19.2",
     "facebook-chat-api": "github:Schmavery/facebook-chat-api",
-    "iconv-lite": "^0.5.0",
+    "iconv-lite": "^0.5.1",
     "immutable": "^3.8.2",
-    "jsdom": "^15.2.1",
+    "jsdom": "^16.2.2",
     "load-json-file": "^6.2.0",
     "node-schedule": "^1.3.2",
     "npmlog": "^4.1.2",
-    "puppeteer": "^2.0.0",
-    "write-json-file": "^4.2.1"
+    "puppeteer": "^3.0.0",
+    "write-json-file": "^4.3.0"
   },
   "devDependencies": {
-    "dumper.js": "^1.3.1"
+    "dotenv": "^8.2.0",
+    "dumper.js": "^1.3.1",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-plugin-import": "^2.20.2"
   }
 }
